<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/BTNP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:layout_marginLeft="13dp"
        android:layout_marginTop="426dp"
        android:text="@string/BTNP"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:onClick="displayInfo"
        android:id="@+id/BTDL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="36dp"
        android:text="@string/BTDL"
        app:layout_constraintStart_toEndOf="@+id/BTNP"
        app:layout_constraintTop_toBottomOf="@+id/EDI" />

    <Button
        android:onClick="exitApp"
        android:id="@+id/BTEX"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="421dp"
        android:text="@string/BTEX"
        app:layout_constraintStart_toEndOf="@+id/BTDL"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        tools:ignore="LabelFor"
        android:id="@+id/EDI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="47dp"
        android:layout_marginLeft="47dp"
        android:layout_marginTop="343dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/EDI"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="" />


</androidx.constraintlayout.widget.ConstraintLayout>